legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr77624-2.c-4.8.2-0.out.txt
pr77624-2.c: In function ‘foo’:
pr77624-2.c:8:3: error: too many arguments to function ‘__atomic_is_lock_free’
   __atomic_is_lock_free (2, a, 2);  
   ^
pr77624-2.c:9:3: error: too few arguments to function ‘__atomic_is_lock_free’
   __atomic_is_lock_free (2);   
   ^
pr77624-2.c:10:3: error: incompatible type for argument 2 of ‘__atomic_is_lock_free’
   __atomic_is_lock_free (2, b);   
   ^
pr77624-2.c:10:3: note: expected ‘const volatile void *’ but argument is of type ‘double’
pr77624-2.c: In function ‘bar’:
pr77624-2.c:20:3: error: too many arguments to function ‘__atomic_always_lock_free’
   __atomic_always_lock_free (2, a, 2);  
   ^
pr77624-2.c:21:3: error: too few arguments to function ‘__atomic_always_lock_free’
   __atomic_always_lock_free (2);  
   ^
pr77624-2.c:22:3: error: incompatible type for argument 2 of ‘__atomic_always_lock_free’
   __atomic_always_lock_free (2, b);  
   ^
pr77624-2.c:22:3: note: expected ‘const volatile void *’ but argument is of type ‘double’
